--- a/VkNewsFeed/Newsfeed/Cell/NewsfeedCell.xib
+++ b/VkNewsFeed/Newsfeed/Cell/NewsfeedCell.xib
@@ -52,6 +52,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YqS-j3-IwX" customClass="WebImageView" customModule="VkNewsFeed" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="97" width="329" height="66"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <color key="backgroundColor" red="0.82352941176470584" green="0.30980392156862746" blue="0.32941176470588235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BCn-sG-bsQ" userLabel="BottomView">
                                 <rect key="frame" x="0.0" y="163" width="329" height="44"/>
